--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -8,7 +8,7 @@
 
 - name: Install sys-utils
   yum: 
-    name: "{{ packages }}"
+    name: {{ packages }}
     state: present
   vars: 
     packages:
@@ -23,7 +23,7 @@
 
 - name: Open port 
   firewalld:
-    port: '{{ item }}'
+    port: {{ item }}
     permanent: yes
     state: enabled
   with_items:
@@ -34,12 +34,68 @@
     - 465/udp
     - 993/udp
     - 995/udp
-
-- name: Restart service
-  service:
-    name : firewalld
-    state: reloaded
+  notify: Reload firewall
 
 - name: Disable selinux
   selinux:
     state: disabled
+
+- name: Install postfix
+  yum: 
+    name: {{ pkg }}
+    state: present
+  vars: 
+    pkg:
+      - postfix
+      - postfix-ldap
+  notify: Enable postfix
+
+#- name: Enabling and starting {{ svc }} service
+#  service:
+#    name: "{{ svc }}"
+#    state: started
+#    enabled: true
+
+- name: Rename postfix main.cf
+  command: mv /etc/postfix/main.cf /etc/postfix/main.cf.bak
+
+- name: Generate postfix main.cf
+  template: src=templates/main.cf.j2 dest=/etc/postfix/main.cf mode=0555
+
+- name: Create directory for postfix ldap configs
+  file:
+    path: /etc/postfix/ldap
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Generate postfix virtual map configs for ldap
+  template: src={{ item.src }} dest={{ item.dest }} mode=0555
+  loop:
+    - { src: 'templates/virtual_alias_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_alias_maps.cf' }
+    - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf.j2' }
+
+- name: Copy postfix tls_policy_maps
+  copy: src=files/tls_policy_maps dest=/etc/postfix/ mode=0555
+
+- name: Generate postfix tls_policy_maps
+  command: postmap /etc/postfix/tls_policy_maps
+
+- name: Rename postfix master.cf
+  command: mv /etc/postfix/master.cf /etc/postfix/master.cf.bak
+
+- name: Copy postfix master.cf
+  copy: src=files/master.cf dest=/etc/postfix/ mode=0555
+
+- name: Generate postfix sender and recipient bcc maps
+  template: src={{ item.src }} dest={{ item.dest }} mode=0555
+  loop:
+    - { src: 'templates/recipient_bcc_maps.j2', dest: '/etc/postfix/recipient_bcc_maps' }
+    - { src: 'templates/sender_bcc_maps.j2', dest: '/etc/postfix/sender_bcc_maps' }
+
+- name: Generate postfix sender and recipient bcc maps
+  command: postmap /etc/postfix/{{ item }}
+  loop:
+    - recipient_bcc_maps
+    - sender_bcc_maps
