--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -1,5 +1,5 @@
 ---
-- name: install remi repo
+- name: Install remi repo
   yum: 
     name: "{{ packages }}"
     state: present
@@ -14,7 +14,7 @@
 #  shell:
 #    cmd: dnf module enable -y php:remi-{{ php_version }}      
 
-- name: enable php module from remi repo
+- name: Enable php module from remi repo
   copy:
     dest: /etc/dnf/modules.d/php.module
     content: |
@@ -31,7 +31,7 @@
 #  shell:
 #    cmd: dnf config-manager --disable remi-safe
 
-- name: disable remi-safe repo
+- name: Disable remi-safe repo
   ini_file:
     path: /etc/yum.repos.d/remi-safe.repo
     section: remi-safe
@@ -40,3 +40,37 @@
     no_extra_spaces: yes
   when: 
     - ansible_os_family == 'RedHat'
+
+- name: install env for roundcube
+  yum: 
+    name: '{{ packages }}'
+    state: present
+  vars: 
+    packages:
+      - httpd
+      - php
+      - php-imap
+      - php-mbstring
+  when: 
+    - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+
+#systemctl enable --now httpd
+
+#wget https://github.com/roundcube/roundcubemail/releases/download/1.5.3/roundcubemail-1.5.3-complete.tar.gz
+
+
+#tar xzvf roundcubemail-1.5.3-complete.tar.gz
+#mkdir /var/www/html/roundcubemail
+#cp -R /root/roundcubemail-1.5.3/* /var/www/html/roundcubemail
+#chown -R apache. /var/www/html/roundcubemail
+
+#    dnf install httpd php mariadb mariadb-server php-imap php-mysqlnd php-mbstring
+
+#   dnf --enablerepo=remi install php-pear php-mcrypt php-intl php-ldap php-pear-Net-SMTP php-pear-Net-Sieve php-pear-Mail-Mime php-pear-Net-IDNA2
+
+
+#/etc/php.ini
+#date.timezone = Europe/Moscow
+
+
+#systemctl restart httpd php-fpm
