--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -8,46 +8,23 @@
 
 - name: Install sys-utils
   yum: 
-    name: {{ packages }}
+    name: {{ sys_pkg }}
     state: present
-  vars: 
-    packages:
-      - htop 
-      - mc 
-      - mlocate 
-      - ncdu 
-      - vim 
-      - wget 
-      - curl
-      - nc
 
 - name: Open port 
   firewalld:
-    port: {{ item }}
+    port: {{ fw_ports }}
     permanent: yes
     state: enabled
-  with_items:
-    - 25/tcp
-    - 110/tcp
-    - 143/tcp
-    - 587/udp
-    - 465/udp
-    - 993/udp
-    - 995/udp
   notify: Reload firewall
 
 - name: Disable selinux
-  selinux:
-    state: disabled
+  selinux: state=disabled
 
 - name: Install postfix
   yum: 
-    name: {{ pkg }}
+    name: {{ postifx_pkg }}
     state: present
-  vars: 
-    pkg:
-      - postfix
-      - postfix-ldap
   notify: Enable postfix
 
 #- name: Enabling and starting {{ svc }} service
@@ -60,7 +37,10 @@
   command: mv /etc/postfix/main.cf /etc/postfix/main.cf.bak
 
 - name: Generate postfix main.cf
-  template: src=templates/main.cf.j2 dest=/etc/postfix/main.cf mode=0555
+  template: 
+    src: templates/main.cf.j2
+    dest: /etc/postfix/main.cf
+    mode: 0555
 
 - name: Create directory for postfix ldap configs
   file:
@@ -71,13 +51,19 @@
     mode: 0644
 
 - name: Generate postfix virtual map configs for ldap
-  template: src={{ item.src }} dest={{ item.dest }} mode=0555
+  template: 
+    src: {{ item.src }}
+    dest: {{ item.dest }}
+    mode: 0555
   loop:
     - { src: 'templates/virtual_alias_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_alias_maps.cf' }
     - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf.j2' }
 
 - name: Copy postfix tls_policy_maps
-  copy: src=files/tls_policy_maps dest=/etc/postfix/ mode=0555
+  copy: 
+    src: files/tls_policy_maps
+    dest: /etc/postfix/
+    mode: 0555
 
 - name: Generate postfix tls_policy_maps
   command: postmap /etc/postfix/tls_policy_maps
@@ -86,10 +72,16 @@
   command: mv /etc/postfix/master.cf /etc/postfix/master.cf.bak
 
 - name: Copy postfix master.cf
-  copy: src=files/master.cf dest=/etc/postfix/ mode=0555
+  copy: 
+    src: files/master.cf
+    dest: /etc/postfix/
+    mode: 0555
 
 - name: Generate postfix sender and recipient bcc maps
-  template: src={{ item.src }} dest={{ item.dest }} mode=0555
+  template: 
+    src: {{ item.src }}
+    dest: {{ item.dest }}
+    mode: 0555
   loop:
     - { src: 'templates/recipient_bcc_maps.j2', dest: '/etc/postfix/recipient_bcc_maps' }
     - { src: 'templates/sender_bcc_maps.j2', dest: '/etc/postfix/sender_bcc_maps' }
