--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -58,7 +58,7 @@
     mode: 0555
   loop:
     - { src: 'templates/virtual_alias_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_alias_maps.cf' }
-    - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf.j2' }
+    - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf' }
 
 - name: Copy postfix tls_policy_maps
   copy: 
