--- a/roles/mail-server-install/tasks/dovecot.yml
+++ b/roles/mail-server-install/tasks/dovecot.yml
@@ -13,16 +13,23 @@
 #- name: Rename dovecot conf.d folder
 #  command: mv /etc/dovecot/conf.d /etc/dovecot/conf.d.bak
 
+- name: Check dovecot conf.d folder
+  stat:
+    path: /etc/dovecot/conf.d
+  register: conf.d
+
 - name: Renaming. Copy dovecot conf.d folder
   copy: 
     remote_src: True
     src: /etc/dovecot/conf.d
     dest: /etc/dovecot/conf.d.bak
+  when: conf.d.stat.exists
 
 - name: Renaming. Delete dovecot conf.d folder
   file: 
     path: /etc/dovecot/conf.d
     state: absent
+  when: conf.d.stat.exists
 
 #- name: Rename dovecot.conf
 #  command: mv /etc/dovecot/dovecot.conf /etc/dovecot/dovecot.conf.bak
