--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -28,6 +28,25 @@
     state: present
   notify: Enable postfix
 
+- name: Create directory for ssl
+  file:
+    path: /ssl
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Upload server cert
+  copy:
+    src: files/{{ item }}
+    dest: /ssl/
+    decrypt: yes
+    mode: 0600
+  loop:
+    - cert.pem
+    - fullchain.pem
+    - key.pem
+
 - name: Check postfix main.cf file
   stat:
     path: /etc/postfix/main.cf
