--- a/roles/mail-server-install/tasks/main.yml
+++ b/roles/mail-server-install/tasks/main.yml
@@ -1,6 +1,13 @@
 ---
 #- include_tasks: "postfix.yml"
+#  when: "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
 #- include_tasks: "dovecot.yml"
+#  when: "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
 - include_tasks: "roundcube.yml"
+  when: 
+    - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+    -  ansible_distribution_major_version | int >= 8
+
 #- include_tasks: "opendkim.yml"
+#  when: "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
 #  when: server_type=='external'
