--- a/roles/mail-server-install/vars/main.yml
+++ b/roles/mail-server-install/vars/main.yml
@@ -38,3 +38,9 @@ fw_ports:
   - 465/udp
   - 993/udp
   - 995/udp
+# Roundcube task
+roundcube_src: https://github.com/roundcube/roundcubemail/releases/download/1.5.3/roundcubemail-1.5.3-complete.tar.gz
+roundcube_db: roundcubecdb
+roundcube_db_user: roundcube
+roundcube_db_pass: roundcubepass
+region: Europe/Moscow
