--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -81,16 +81,17 @@
     dest: /root/
     remote_src: yes
 
-#- name: Copy roundcube folder to the document folder
-#  copy: 
-#    remote_src: True
-#    src: /root/{{ roundcube }}
-#    dest: /var/www/html/
-
-- name: Sync roundcube folder to the apache document folder
-  synchronize:
+- name: Copy roundcube folder to the document folder
+  copy: 
+    remote_src: True
     src: /root/{{ roundcube }}
     dest: /var/www/html/
+    directory_mode: yes
+
+#- name: Sync roundcube folder to the apache document folder
+#  synchronize:
+#    src: /root/{{ roundcube }}
+#    dest: /var/www/html/
 
 - name: Change roundcube folder permission
   file: 
