--- a/mail-server-install.yml
+++ b/mail-server-install.yml
@@ -3,3 +3,6 @@
   become: yes
   roles: 
      - mail-server-install
+  when: 
+  - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+  -  ansible_distribution_major_version | int >= 8
