--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -104,7 +104,7 @@
     cmd: >
       sqlite3 -init {{ roundcube_html_path }}/SQL/sqlite.initial.sql
       {{ roundcube_db_path }}/sqlite.db
-    creates: {{ roundcube_db_path }}/sqlite.db
+    creates: '{{ roundcube_db_path }}/sqlite.db'
 
 - name: Generate DES-key
   command: cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 24 | head -n 1
