--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -146,7 +146,7 @@
 - name: Correct roundcube default domain
   replace:
     path: /var/www/html/config/defaults.inc.php
-    regexp: '$config['username_domain'] ='
-    replace: '$config['username_domain'] = '{{ domain }}';'
+    regexp: "$config['username_domain'] ="
+    replace: "$config['username_domain'] = '{{ domain }}';"
     backup: yes
   notify: Restart httpd
