--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -101,7 +101,7 @@
 
 - name: Initialize DB
   command:
-    cmd: sqlite3 -init {{ roundcube_html_path }}/SQL/sqlite.initial.sql {{ roundcube_db_path }}/sqlite.db '.quit'
+    cmd: "sqlite3 -init {{ roundcube_html_path }}/SQL/sqlite.initial.sql {{ roundcube_db_path }}/sqlite.db '.quit'"
    creates: '{{ roundcube_db_path }}/sqlite.db'
 
 - name: Generate DES-key
