--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -105,7 +105,8 @@
     creates: '{{ roundcube_db_path }}/sqlite.db'
 
 - name: Generate DES-key
-  command: cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 24 | head -n 1
+  command: 
+    cmd: cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 24 | head -n 1
   register: des_key
 
 #- name: Sync roundcube folder to the apache document folder
