--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -105,8 +105,7 @@
     creates: '{{ roundcube_db_path }}/sqlite.db'
 
 - name: Generate DES-key
-  command: 
-    cmd: "cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 24 | head -n 1"
+  shell: cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 24 | head -n 1"
   register: des_key
 
 #- name: Sync roundcube folder to the apache document folder
