--- a/roles/mail-server-install/tasks/roundcube.yml
+++ b/roles/mail-server-install/tasks/roundcube.yml
@@ -145,6 +145,6 @@
   replace:
     path: /var/www/html/config/defaults.inc.php
     regexp: '$config['username_domain'] ='
-    replace: '$config['username_domain'] = '{{ domain }}';'
+    replace: "$config['username_domain'] = '{{ domain }}';"
     backup: yes
   notify: Restart httpd
