--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -32,14 +32,14 @@
     state: directory
     owner: root
     group: root
-    mode: 0644
+    mode: '0644'
 
 - name: Add server certs and keys
   copy:
     src: files/{{ item }}
     dest: /ssl/
     decrypt: yes
-    mode: 0600
+    mode: '0600'
   loop:
     - cert.pem
     - fullchain.pem
@@ -67,7 +67,7 @@
   template: 
     src: templates/main.cf.j2
     dest: /etc/postfix/main.cf
-    mode: 0555
+    mode: 0644
 
 - name: Create directory for postfix ldap configs
   file:
@@ -75,13 +75,13 @@
     state: directory
     owner: root
     group: root
-    mode: 0644
+    mode: '0644'
 
 - name: Generate postfix virtual map configs for ldap
   template: 
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
-    mode: 0555
+    mode: '0644'
   loop:
     - { src: 'templates/virtual_alias_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_alias_maps.cf' }
     - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf' }
@@ -90,7 +90,7 @@
   copy: 
     src: files/tls_policy_maps
     dest: /etc/postfix/
-    mode: 0555
+    mode: '0644'
 
 - name: Generate postfix tls_policy_maps
   command: postmap /etc/postfix/tls_policy_maps
@@ -117,13 +117,13 @@
   copy: 
     src: files/master.cf
     dest: /etc/postfix/
-    mode: 0555
+    mode: '0644'
 
 - name: Generate postfix sender and recipient bcc maps
   template: 
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
-    mode: 0555
+    mode: '0644'
   loop:
     - { src: 'templates/recipient_bcc_maps.j2', dest: '/etc/postfix/recipient_bcc_maps' }
     - { src: 'templates/sender_bcc_maps.j2', dest: '/etc/postfix/sender_bcc_maps' }
